Fix doppio click che non funziona e z-index che impazziscono

--- a/Esercizi/shell/assets/css/style.css
+++ b/Esercizi/shell/assets/css/style.css
@@ -27,6 +27,7 @@ desktop {
     padding: 10px;
     text-align: center;
     color: white;
+    z-index: 1;
 }
 
 .app_icon:hover>* {
@@ -491,14 +492,16 @@ footer {
 .select-name-text{
     position: relative;
     padding-top: 20%;
-    left: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
     display: block;
 }
 
 .select-name-value{
     position: relative;
-    left: 20px;
-    width: 80%;
+    left: 5px;
+    right: 5px;
+    width: calc(100% - 25px);
     margin-top: 10px;
     display: block;
     border-radius: 15px;
